--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,12 +5,13 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
+    "dev": "ts-node-dev ./src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.6.0",
     "@trpc/server": "10.0.0-rc.5",
     "fastify": "^4.9.2",
@@ -18,9 +19,8 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
-    "nodemon": "^2.0.20",
     "prisma": "^4.6.0",
-    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   }
 }
