--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.14.5",
+    "@tanstack/react-query-devtools": "^4.14.5",
     "@trpc/client": "10.0.0-rc.5",
     "@trpc/react-query": "10.0.0-rc.5",
     "@trpc/server": "10.0.0-rc.5",
