--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.ts",
+  "main": "./src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev ./src/server.ts"
@@ -14,6 +14,7 @@
     "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.6.0",
     "@trpc/server": "10.0.0-rc.5",
+    "argon2": "^0.30.2",
     "fastify": "^4.9.2",
     "zod": "^3.19.1"
   },
