update deps: toastify and zustand

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,8 +16,10 @@
     "@trpc/server": "10.0.0-rc.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.4.3",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
